--- a/index-shopassistant.html
+++ b/index-shopassistant.html
@@ -185,7 +185,8 @@
                       data-frame_999="o:0;st:w;"
                       style="z-index: 13; font-family: 'Inter'"
                     >
-					跨境无界，商机无限
+                      跨境无界<br />商机无限<br />
+                      <span style="color: #ffcf00">世界触手可及</span>
                     </rs-layer>
 
                     <rs-layer
@@ -194,7 +195,7 @@
                       data-rsp_ch="on"
                       data-xy="x:r,r,c,c;xo:0px,0px,230px,230px;yo:80px,80px,-75px,-75px;"
                       data-text="w:normal;s:20,20,11,11;l:0,0,14,14;"
-                      data-dim="w:1117px,1117px,700px,700px;h:628px,628px,393px,393px;"
+                      data-dim="w:900px,900px,564px,564px;h:506px,506px,317px,317px;"
                       data-basealign="slide"
                       data-frame_0="sX:0.9;sY:0.9;"
                       data-frame_1="sp:1000;"
@@ -214,7 +215,7 @@
                       data-type="text"
                       data-color="#12263a"
                       data-rsp_ch="on"
-                      data-xy="xo:80px,80px,46px,46px;yo:310px,310px,255px,255px;"
+                      data-xy="xo:80px,80px,46px,46px;yo:440px,440px,255px,255px;"
                       data-text="w:normal;s:16,16,9,9;l:26,26,14,14;"
                       data-dim="w:420px,420px,243px,243px;"
                       data-vbility="t,t,f,t"
@@ -223,7 +224,7 @@
                       data-frame_999="o:0;st:w;"
                       style="z-index: 14; font-family: 'Inter'"
                     >
-                      我们拥有丰富的产品线、强大的供应链能力和完善的物流体系，致力于打造高效、便捷的全球电子商务体验，助力您开拓无限商机，世界触手可及。
+                      我们拥有丰富的产品线、强大的供应链能力和完善的物流体系，致力于打造高效、便捷的全球电子商务体验，助力您开拓无限商机。
                     </rs-layer>
                     <a
                       id="slider-1-slide-1-layer-7"
@@ -246,7 +247,7 @@
                         background-color: #830a48;
                         font-family: 'Inter';
                       "
-                      >Try Demo
+                      >联系我们
                     </a>
 
                     <rs-layer
