--- a/index-shopassistant.html
+++ b/index-shopassistant.html
@@ -130,12 +130,12 @@
                   </rs-layer>
 
                   <rs-layer id="slider-1-slide-1-layer-5" data-type="image" data-rsp_ch="on"
-                    data-xy="x:r,r,c,c;xo:-150px,0-150px,230px,230px;yo:80px,80px,-75px,-75px;"
+                    data-xy="x:r,r,c,c;xo:0px,0px,0px,0px;yo:0px,0px,0px,0px;"
                     data-text="w:normal;s:20,20,11,11;l:0,0,14,14;"
-                    data-dim="w:1117px,1117px,700px,700px;h:537px,537px,336px,336px;" data-basealign="slide"
+                    data-dim="w:950px,950px,595px,595px;h:892px,892px,558px,558px;" data-basealign="slide"
                     data-frame_0="sX:0.9;sY:0.9;" data-frame_1="sp:1000;" data-frame_999="o:0;st:w;"
                     style="z-index: 8"><img src="content/shopassistant/images/dummy.png" class="tp-rs-img rs-lazyload"
-                      width="1190" height="1012" data-lazyload="content/shopassistant/images/home-people.jpg" />
+                      width="1190" height="1012" data-lazyload="content/shopassistant/images/home-people.png" />
                   </rs-layer>
 
                   <rs-layer id="slider-1-slide-1-layer-6" data-type="text" data-color="#12263a" data-rsp_ch="on"
@@ -206,9 +206,8 @@
                 </div>
                 <div class="col-12">
                   <h2>
-                    We provide
-                    <br />
-                    a wide range of services
+                    多元化选择
+                    <br />一站式满足
                   </h2>
                 </div>
                 <div class="col-12">
@@ -218,7 +217,7 @@
                   <img class="scale-with-grid" src="content/shopassistant/images/shopassistant-sep2.png"
                     alt="shopassistant-sep2" width="26" height="8" />
                 </div>
-                <div class="col-12">
+                <div class="col-12" style="max-width: 780px;">
                   <p>
                     欢迎探索我们的产品，每一款都为您的生活增添独特色彩。
                     舒适家居，激情户外，童趣玩乐，温馨宠爱，选择我们，就是选择品质与精致。
@@ -258,7 +257,7 @@
                     border: 1px solid #e2e2e2;
                     border-radius: 32px;
                   ">
-                <img class="product-icon" src="content/shopassistant/images/outdoors.png" />
+                <img class="product-icon" src="content/shopassistant/images/outdoors.jpg" />
                 <hr class="no_line" style="margin: 0 auto 30px auto" />
                 <hr style="margin: 0 auto 30px; background-color: #e2e2e2" />
                 <h5>户外用品</h5>
@@ -697,20 +696,20 @@
                     </p>
                   </div>
                 </div>
-                <!-- <div class="col-md-9">
+                <div class="col-md-9">
                   <div class="column_attr clearfix align_right mobile_align_center">
-                    <p><span style="color: #ffffff">John Smith</span></p>
+                    <p><span style="color: #ffffff">一位来自法国的客户</span></p>
                   </div>
                 </div>
                 <div class="col-md-3">
                   <div class="image_frame image_item no_link scale-with-grid aligncenter no_border"
                     style="margin-top: -40px">
                     <div class="image_wrapper">
-                      <img class="scale-with-grid" src="content/shopassistant/images/shopassistant-home-pic1.webp"
-                        alt="shopassistant-home-pic1" width="98" height="96" />
+                      <img class="scale-with-grid rating-user-img" src="content/shopassistant/images/people1.png"
+                        alt="shopassistant-home-pic1" width="92" height="92" />
                     </div>
                   </div>
-                </div> -->
+                </div>
               </div>
             </div>
             <div class="col-md-6" data-col="one-second" style="padding: 0 0 40px 15px">
@@ -729,20 +728,20 @@
                     </p>
                   </div>
                 </div>
-                <!-- <div class="col-md-9">
+                <div class="col-md-9">
                   <div class="column_attr clearfix align_right mobile_align_center">
-                    <p><span style="color: #ffffff">John Smith</span></p>
+                    <p><span style="color: #ffffff">一位来自英国的客户</span></p>
                   </div>
                 </div>
                 <div class="col-md-3">
                   <div class="image_frame image_item no_link scale-with-grid aligncenter no_border"
                     style="margin-top: -40px">
                     <div class="image_wrapper">
-                      <img class="scale-with-grid" src="content/shopassistant/images/shopassistant-home-pic1.webp"
-                        alt="shopassistant-home-pic1" width="98" height="96" />
+                      <img class="scale-with-grid rating-user-img" src="content/shopassistant/images/people2.png"
+                        alt="shopassistant-home-pic1" width="92" height="92" />
                     </div>
                   </div>
-                </div> -->
+                </div>
               </div>
             </div>
           </div>
@@ -772,9 +771,11 @@
                 </div>
               </div>
               <div class="column_attr clearfix text-center">
-                <h2>
-                  Our specialists
-                  <span class="themecolor">are waiting</span> to help you
+                <h2 style="font-family: none;">
+                  您需要的全球化
+                  <!-- <span class="themecolor">are waiting</span>  -->
+                  <br/>
+                  物流仓储服务
                 </h2>
               </div>
               <div class="image_frame image_item no_link scale-with-grid text-center no_border">
@@ -785,9 +786,8 @@
               </div>
               <div class="column_attr clearfix text-center">
                 <p>
-                  Felis congue orci tellus lectus libero consectetur lorem
-                  magna eros nostra dapibus bibendum lorem fermentum dolor
-                  purus auctor venenatis nec.
+                  我们的物流仓储能力已覆盖亚洲、欧洲，全球化战略布局意味着我们能为您提供更广泛的服务网络，
+                  <br/>使您和您的客户享受到更高效、便捷的购物体验。
                 </p>
               </div>
               <hr class="no_line" style="margin: 0 auto 20px auto" />
@@ -799,9 +799,9 @@
               </div>
               <hr class="no_line" style="margin: 0 auto 20px auto" />
               <p>
-                <span class="shopassistant-heading bepurple">Jane Cooper</span>
+                <span class="shopassistant-heading bepurple">中国广东</span>
               </p>
-              <p><span class="shopassistant-heading">Art director</span></p>
+              <!-- <p><span class="shopassistant-heading">Art director</span></p> -->
             </div>
             <div class="col-md-4 text-center" data-col="one-third">
               <div class="image_wrapper">
@@ -810,9 +810,9 @@
               </div>
               <hr class="no_line" style="margin: 0 auto 20px auto" />
               <p>
-                <span class="shopassistant-heading bepurple">Joseph Master</span>
+                <span class="shopassistant-heading bepurple">新加坡</span>
               </p>
-              <p><span class="shopassistant-heading">CEO</span></p>
+              <!-- <p><span class="shopassistant-heading">CEO</span></p> -->
             </div>
             <div class="col-md-4 text-center" data-col="one-third">
               <div class="image_wrapper">
@@ -821,9 +821,9 @@
               </div>
               <hr class="no_line" style="margin: 0 auto 20px auto" />
               <p>
-                <span class="shopassistant-heading bepurple">Alexandra Levinski</span>
+                <span class="shopassistant-heading bepurple">法国</span>
               </p>
-              <p><span class="shopassistant-heading">CTO</span></p>
+              <!-- <p><span class="shopassistant-heading">CTO</span></p> -->
             </div>
           </div>
         </div>
