--- a/index-shopassistant.html
+++ b/index-shopassistant.html
@@ -45,15 +45,20 @@
               <div class="top_bar_left clearfix">
                 <div class="logo">
                   <a id="logo" href="index-shopassistant.html" title="ShopAssistant - Betheme" data-height="60"
-                    data-padding="15"><img class="logo-main scale-with-grid svg"
-                      src="content/shopassistant/images/shopassistant.svg" data-height="" alt="shopassistant"
-                      width="209" /><img class="logo-sticky scale-with-grid svg"
-                      src="content/shopassistant/images/shopassistant.svg" data-height="" alt="shopassistant"
-                      width="209" /><img class="logo-mobile scale-with-grid svg"
-                      src="content/shopassistant/images/shopassistant.svg" data-height="" alt="shopassistant"
-                      width="209" /><img class="logo-mobile-sticky scale-with-grid svg"
-                      src="content/shopassistant/images/shopassistant.svg" data-height="" alt="shopassistant"
-                      width="209" /></a>
+                    data-padding="15">
+                    <img class="logo-main scale-with-grid svg"
+                      src="content/shopassistant/images/logo3.png" data-height="" alt="shopassistant"
+                      width="169" />
+                      <img class="logo-sticky scale-with-grid svg"
+                      src="content/shopassistant/images/logo3.png" data-height="" alt="shopassistant"
+                      width="169" />
+                      <img class="logo-mobile scale-with-grid svg"
+                      src="content/shopassistant/images/logo3.png" data-height="" alt="shopassistant"
+                      width="169" />
+                      <img class="logo-mobile-sticky scale-with-grid svg"
+                      src="content/shopassistant/images/logo3.png" data-height="" alt="shopassistant"
+                      width="169" />
+                    </a>
                 </div>
                 <div class="menu_wrapper">
                   <nav id="menu">
