--- a/index-shopassistant.html
+++ b/index-shopassistant.html
@@ -46,19 +46,15 @@
                 <div class="logo">
                   <a id="logo" href="index-shopassistant.html" title="ShopAssistant - Betheme" data-height="60"
                     data-padding="15">
-                    <img class="logo-main scale-with-grid svg"
-                      src="content/shopassistant/images/logo3.png" data-height="" alt="shopassistant"
-                      width="169" />
-                      <img class="logo-sticky scale-with-grid svg"
-                      src="content/shopassistant/images/logo3.png" data-height="" alt="shopassistant"
-                      width="169" />
-                      <img class="logo-mobile scale-with-grid svg"
-                      src="content/shopassistant/images/logo3.png" data-height="" alt="shopassistant"
-                      width="169" />
-                      <img class="logo-mobile-sticky scale-with-grid svg"
-                      src="content/shopassistant/images/logo3.png" data-height="" alt="shopassistant"
-                      width="169" />
-                    </a>
+                    <img class="logo-main scale-with-grid svg" src="content/shopassistant/images/logo3.png"
+                      data-height="" alt="shopassistant" width="169" />
+                    <img class="logo-sticky scale-with-grid svg" src="content/shopassistant/images/logo3.png"
+                      data-height="" alt="shopassistant" width="169" />
+                    <img class="logo-mobile scale-with-grid svg" src="content/shopassistant/images/logo3.png"
+                      data-height="" alt="shopassistant" width="169" />
+                    <img class="logo-mobile-sticky scale-with-grid svg" src="content/shopassistant/images/logo3.png"
+                      data-height="" alt="shopassistant" width="169" />
+                  </a>
                 </div>
                 <div class="menu_wrapper">
                   <nav id="menu">
@@ -729,7 +725,8 @@
                     <img class="scale-with-grid" src="content/shopassistant/images/shopassistant-about-icon1.webp" />
                     <h5><span style="color: #ffffff">愉快</span></h5>
                     <p>
-                      <span style="color: #ffffff">我希望将这些照片挂在圣诞树上 - 我将用丝带替换钥匙圈部分。它们尺寸十分完美，看上去很有质感。包装非常仔细，而且送货速度非常快。购物体验真的很愉快！</span>
+                      <span style="color: #ffffff">我希望将这些照片挂在圣诞树上 -
+                        我将用丝带替换钥匙圈部分。它们尺寸十分完美，看上去很有质感。包装非常仔细，而且送货速度非常快。购物体验真的很愉快！</span>
                     </p>
                   </div>
                 </div>
@@ -779,7 +776,7 @@
                 <h2 style="font-family: none;">
                   您需要的全球化
                   <!-- <span class="themecolor">are waiting</span>  -->
-                  <br/>
+                  <br />
                   物流仓储服务
                 </h2>
               </div>
@@ -792,7 +789,7 @@
               <div class="column_attr clearfix text-center">
                 <p>
                   我们的物流仓储能力已覆盖亚洲、欧洲，全球化战略布局意味着我们能为您提供更广泛的服务网络，
-                  <br/>使您和您的客户享受到更高效、便捷的购物体验。
+                  <br />使您和您的客户享受到更高效、便捷的购物体验。
                 </p>
               </div>
               <hr class="no_line" style="margin: 0 auto 20px auto" />
@@ -933,26 +930,30 @@
           <div class="row">
             <div class="col-md-6" data-col="one-second">
               <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-12">
                   <div class="column_attr clearfix mobile_align_center">
                     <img class="scale-with-grid" src="content/shopassistant/images/shopassistant-sep3.svg" />
                     <hr class="no_line" style="margin: 0 auto 10px auto" />
-                    <h2>
-                      Check,
+                    <h2 class="bottom-h2">
+                      您的首选
                       <br />
-                      how we can help you!
+                      跨境合作伙伴
                     </h2>
-                    <img class="scale-with-grid" src="content/shopassistant/images/shopassistant-sep6.svg" />
+                    <img class="scale-with-grid cutting-line"
+                      src="content/shopassistant/images/shopassistant-sep6.svg" />
                     <hr class="no_line" style="margin: 0 auto 10px auto" />
-                    <p>
-                      <span style="color: #12263a">Aenean netus nunc lorem hendrerit ut at blandit
-                        sagittis ad ornare erat sem pharetra aliquam
-                        ullamcorper conubia tortor
+                    <p class="bottom-text">
+                      <span style="color: #12263a">
+                        无论您是需求咨询，还是寻求合作，
+                        <br />
+                        欢迎随时与我们联系,
+                        <br />
+                        期待与您的携手共赢。
                       </span>
                     </p>
                   </div>
                 </div>
-                <div class="col-md-10">
+                <!-- <div class="col-md-10">
                   <div class="column_attr clearfix" style="
                         background-color: #ffd830;
                         background-image: url('content/shopassistant/images/shopassistant-wrap-bg7.png');
@@ -974,51 +975,78 @@
                       <a style="color: #12263a" href="mail:+noreply@envato.com"><span>noreply@envato.com</span></a>
                     </p>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="col-md-6" data-col="one-second" style="
-                  padding: 50px 70px 10px;
+                  padding: 50px 70px;
                   background-color: #fff;
                   border-radius: 32px;
                 ">
               <h4>
-                Have a question?
-                <br />
-                <b>Write to us!</b>
+                XXXX联系方式
               </h4>
               <div id="contactWrapper">
                 <div id="contactform">
                   <form method="post" id="reused_form">
-                    <!-- One Second (1/2) Column -->
                     <div class="column one-second">
-                      <input placeholder="Your name" id="name" type="text" name="Name" required maxlength="50" />
+                      邮箱：
                     </div>
-                    <!-- One Second (1/2) Column -->
                     <div class="column one-second">
-                      <input placeholder="Your e-mail" id="email" type="email" name="Email" required maxlength="50" />
+                      XXXXXXX
                     </div>
-                    <div class="column one">
-                      <input placeholder="Subject" id="subject" type="text" name="Subject" maxlength="50" />
+                    <div class="column one-second">
+                      电话：
                     </div>
-                    <div class="column one">
-                      <textarea placeholder="Message" id="message" name="Message" rows="10" maxlength="6000"
-                        required></textarea>
+                    <div class="column one-second">
+                      XXXXXXX
                     </div>
-                    <div class="column one">
-                      <button class="button-primary" id="submit" type="submit">
-                        Send A Message
-                      </button>
+                    <div class="column one-second">
+                      地址：
+                    </div>
+                    <div class="column one-second">
+                      XXXXXXX
+                    </div>
+                    <div class="column one-second">
+                      邮编：
+                    </div>
+                    <div class="column one-second">
+                      XXXXXXX
                     </div>
                   </form>
-                  <div id="success_message" style="display: none">
-                    <h3>Submitted the form successfully!</h3>
-                    <p>We will get back to you soon.</p>
-                  </div>
-                  <div id="error_message" style="width: 100%; height: 100%; display: none">
-                    <h3>Error</h3>
-                    Sorry there was an error sending your form.
-                  </div>
+                </div>
+              </div>
+              <h4>
+                XXXX联系方式
+              </h4>
+              <div id="contactWrapper">
+                <div id="contactform">
+                  <form method="post" id="reused_form">
+                    <div class="column one-second">
+                      邮箱：
+                    </div>
+                    <div class="column one-second">
+                      XXXXXXX
+                    </div>
+                    <div class="column one-second">
+                      电话：
+                    </div>
+                    <div class="column one-second">
+                      XXXXXXX
+                    </div>
+                    <div class="column one-second">
+                      地址：
+                    </div>
+                    <div class="column one-second">
+                      XXXXXXX
+                    </div>
+                    <div class="column one-second">
+                      邮编：
+                    </div>
+                    <div class="column one-second">
+                      XXXXXXX
+                    </div>
+                  </form>
                 </div>
               </div>
             </div>
