--- a/index-shopassistant.html
+++ b/index-shopassistant.html
@@ -795,8 +795,8 @@
               <hr class="no_line" style="margin: 0 auto 20px auto" />
             </div>
             <div class="col-md-4 text-center" data-col="one-third">
-              <div class="image_wrapper">
-                <img class="scale-with-grid" src="content/shopassistant/images/shopassistant-about-pic2.webp"
+              <div class="country-image_wrapper">
+                <img class="country-img guangdong" src="content/shopassistant/images/Guangdong.png"
                   alt="shopassistant-about-pic2" width="400" height="399" />
               </div>
               <hr class="no_line" style="margin: 0 auto 20px auto" />
@@ -806,8 +806,8 @@
               <!-- <p><span class="shopassistant-heading">Art director</span></p> -->
             </div>
             <div class="col-md-4 text-center" data-col="one-third">
-              <div class="image_wrapper">
-                <img class="scale-with-grid" src="content/shopassistant/images/shopassistant-about-pic3.webp"
+              <div class="country-image_wrapper">
+                <img class="country-img singapore" src="content/shopassistant/images/Singapore.png"
                   alt="shopassistant-about-pic3" width="400" height="396" />
               </div>
               <hr class="no_line" style="margin: 0 auto 20px auto" />
@@ -817,8 +817,8 @@
               <!-- <p><span class="shopassistant-heading">CEO</span></p> -->
             </div>
             <div class="col-md-4 text-center" data-col="one-third">
-              <div class="image_wrapper">
-                <img class="scale-with-grid" src="content/shopassistant/images/shopassistant-about-pic4.webp"
+              <div class="country-image_wrapper">
+                <img class="country-img paris" src="content/shopassistant/images/Paris.png"
                   alt="shopassistant-about-pic4" width="400" height="392" />
               </div>
               <hr class="no_line" style="margin: 0 auto 20px auto" />
@@ -993,10 +993,16 @@
                       邮箱：
                     </div>
                     <div class="column one-second">
-                      XXXXXXX
+                      shopeefy36@gmail.com
                     </div>
                     <div class="column one-second">
                       电话：
+                    </div>
+                    <div class="column one-second">
+                      +86 07906863655
+                    </div>
+                    <div class="column one-second">
+                      工作时间：
                     </div>
                     <div class="column one-second">
                       XXXXXXX
@@ -1007,16 +1013,10 @@
                     <div class="column one-second">
                       XXXXXXX
                     </div>
-                    <div class="column one-second">
-                      邮编：
-                    </div>
-                    <div class="column one-second">
-                      XXXXXXX
-                    </div>
                   </form>
                 </div>
               </div>
-              <h4>
+              <!-- <h4>
                 XXXX联系方式
               </h4>
               <div id="contactWrapper">
@@ -1047,7 +1047,7 @@
                       XXXXXXX
                     </div>
                   </form>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
