--- a/content/shopassistant/pricing.html
+++ b/content/shopassistant/pricing.html
@@ -107,7 +107,7 @@
 					<div class="row">
 						<div class="col-md-4" data-col="one-third" style="padding:20px 1%">
 							<div class="text-center" style="background-color:#fff7f2;padding:0 40px 40px;border-radius: 30px;"> <span class="shopassistant-heading beturquoise">Micro Company</span>
-								<div class="google_font" style="font-family:'Zen Kaku Gothic New',Arial,Tahoma,sans-serif;font-size:55px;line-height:55px;font-weight:600;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="25">25</span></span>$ </div>
+								<div class="google_font" style="font-family:'',Arial,Tahoma,sans-serif;font-size:55px;line-height:55px;font-weight:600;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="25">25</span></span>$ </div>
 								<p> <span style="color: #12263A">netto</span> </p>
 								<hr class="no_line" style="margin: 0 auto 15px auto" />
 								<ul class="list_custom" style="text-align: left; color: #12263A; ">
@@ -122,7 +122,7 @@
 						</div>
 						<div class="col-md-4" data-col="one-third" style="padding:20px 1%">
 							<div class="text-center" style="background-color:#fff7f2;padding:0 40px 40px;border-radius: 30px;"> <span class="shopassistant-heading beyellow">Micro Company</span>
-								<div class="google_font" style="font-family:'Zen Kaku Gothic New',Arial,Tahoma,sans-serif;font-size:55px;line-height:55px;font-weight:600;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="50">50</span></span>$ </div>
+								<div class="google_font" style="font-family:'',Arial,Tahoma,sans-serif;font-size:55px;line-height:55px;font-weight:600;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="50">50</span></span>$ </div>
 								<p> <span style="color: #12263A">netto</span> </p>
 								<hr class="no_line" style="margin: 0 auto 15px auto" />
 								<ul class="list_custom" style="text-align: left; color: #12263A; ">
@@ -137,7 +137,7 @@
 						</div>
 						<div class="col-md-4" data-col="one-third" style="padding:20px 1%">
 							<div class="text-center" style="background-color:#fff7f2;padding:0 40px 40px;border-radius: 30px;"> <span class="shopassistant-heading bepink">Micro Company</span>
-								<div class="google_font" style="font-family:'Zen Kaku Gothic New',Arial,Tahoma,sans-serif;font-size:55px;line-height:55px;font-weight:600;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="75">75</span></span>$ </div>
+								<div class="google_font" style="font-family:'',Arial,Tahoma,sans-serif;font-size:55px;line-height:55px;font-weight:600;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="75">75</span></span>$ </div>
 								<p> <span style="color: #12263A">netto</span> </p>
 								<hr class="no_line" style="margin: 0 auto 15px auto" />
 								<ul class="list_custom" style="text-align: left; color: #12263A; ">
@@ -197,7 +197,7 @@
 							<div class="row">
 								<div class="col-md-4">
 									<div class="column_attr clearfix align_right mobile_align_center" style="padding:0 40px 0 0;border-right: 1px solid #E4E4E4;">
-										<div class="google_font" style="font-family:'Zen Kaku Gothic New',Arial,Tahoma,sans-serif;font-size:48px;line-height:48px;font-weight:400;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="169">169</span></span>% </div>
+										<div class="google_font" style="font-family:'',Arial,Tahoma,sans-serif;font-size:48px;line-height:48px;font-weight:400;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="169">169</span></span>% </div>
 										<p> average order value </p>
 									</div>
 								</div>
@@ -229,7 +229,7 @@
 									<hr class="no_line" style="margin: 0 auto 0px auto" /> </div>
 								<div class="col-md-4">
 									<div class="column_attr clearfix align_right mobile_align_center" style="padding:0 40px 0 0;border-right: 1px solid #E4E4E4;">
-										<div class="google_font" style="font-family:'Zen Kaku Gothic New',Arial,Tahoma,sans-serif;font-size:48px;line-height:48px;font-weight:400;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="325">325</span></span>% </div>
+										<div class="google_font" style="font-family:'',Arial,Tahoma,sans-serif;font-size:48px;line-height:48px;font-weight:400;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="325">325</span></span>% </div>
 										<p> website traffic </p>
 									</div>
 								</div>
@@ -261,7 +261,7 @@
 									<hr class="no_line" style="margin: 0 auto 0px auto" /> </div>
 								<div class="col-md-4">
 									<div class="column_attr clearfix align_right mobile_align_center" style="padding:0 40px 0 0;border-right: 1px solid #E4E4E4;">
-										<div class="google_font" style="font-family:'Zen Kaku Gothic New',Arial,Tahoma,sans-serif;font-size:48px;line-height:48px;font-weight:400;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="47">47</span></span>% </div>
+										<div class="google_font" style="font-family:'',Arial,Tahoma,sans-serif;font-size:48px;line-height:48px;font-weight:400;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="47">47</span></span>% </div>
 										<p> fewer abandoned shopping cards </p>
 									</div>
 								</div>
@@ -293,7 +293,7 @@
 									<hr class="no_line" style="margin: 0 auto 0px auto" /> </div>
 								<div class="col-md-4">
 									<div class="column_attr clearfix align_right mobile_align_center" style="padding:0 40px 0 0;border-right: 1px solid #E4E4E4;">
-										<div class="google_font" style="font-family:'Zen Kaku Gothic New',Arial,Tahoma,sans-serif;font-size:48px;line-height:48px;font-weight:400;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="133">133</span></span>% </div>
+										<div class="google_font" style="font-family:'',Arial,Tahoma,sans-serif;font-size:48px;line-height:48px;font-weight:400;letter-spacing:0px;color:#12263A;"> <span class="counter-inline animate-math"><span class="number" data-to="133">133</span></span>% </div>
 										<p> increase in sales by one customer </p>
 									</div>
 								</div>
