--- a/content/shopassistant/contact.html
+++ b/content/shopassistant/contact.html
@@ -105,13 +105,13 @@
 							<hr class="no_line" style="margin: 0 auto 15px auto" />
 							<div class="column_attr clearfix" style="background-image:url('images/shopassistant-contact-icon1.svg');background-repeat:no-repeat;background-position:left top;padding:15px 0 20px 60px ;">
 								<a href="tel:+61383766284">
-									<div class="google_font" style="font-family:'Zen Kaku Gothic New',Arial,Tahoma,sans-serif;font-size:18px;line-height:18px;font-weight:400;letter-spacing:0px;color:#12263a;"> +61 (0) 383 766 284 </div>
+									<div class="google_font" style="font-family:'',Arial,Tahoma,sans-serif;font-size:18px;line-height:18px;font-weight:400;letter-spacing:0px;color:#12263a;"> +61 (0) 383 766 284 </div>
 								</a>
 							</div>
 							<hr class="no_line" style="margin: 0 auto 10px auto" />
 							<div class="column_attr clearfix" style="background-image:url('images/shopassistant-contact-icon2.svg');background-repeat:no-repeat;background-position:left top;padding:15px 0 20px 60px ;">
 								<a href="#">
-									<div class="google_font" style="font-family:'Zen Kaku Gothic New',Arial,Tahoma,sans-serif;font-size:18px;line-height:18px;font-weight:400;letter-spacing:0px;color:#12263a;"> <span>noreply@envato.com</span> </div>
+									<div class="google_font" style="font-family:'',Arial,Tahoma,sans-serif;font-size:18px;line-height:18px;font-weight:400;letter-spacing:0px;color:#12263a;"> <span>noreply@envato.com</span> </div>
 								</a>
 							</div>
 						</div>
@@ -126,13 +126,13 @@
 							<hr class="no_line" style="margin: 0 auto 15px auto" />
 							<div class="column_attr clearfix" style="background-image:url('images/shopassistant-contact-icon1.svg');background-repeat:no-repeat;background-position:left top;padding:15px 0 20px 60px ;">
 								<a href="tel:+61383766284">
-									<div class="google_font" style="font-family:'Zen Kaku Gothic New',Arial,Tahoma,sans-serif;font-size:18px;line-height:18px;font-weight:400;letter-spacing:0px;color:#12263a;"> +61 (0) 383 766 284 </div>
+									<div class="google_font" style="font-family:'',Arial,Tahoma,sans-serif;font-size:18px;line-height:18px;font-weight:400;letter-spacing:0px;color:#12263a;"> +61 (0) 383 766 284 </div>
 								</a>
 							</div>
 							<hr class="no_line" style="margin: 0 auto 10px auto" />
 							<div class="column_attr clearfix" style="background-image:url('images/shopassistant-contact-icon2.svg');background-repeat:no-repeat;background-position:left top;padding:15px 0 20px 60px ;">
 								<a href="#">
-									<div class="google_font" style="font-family:'Zen Kaku Gothic New',Arial,Tahoma,sans-serif;font-size:18px;line-height:18px;font-weight:400;letter-spacing:0px;color:#12263a;"> <span>noreply@envato.com</span> </div>
+									<div class="google_font" style="font-family:'',Arial,Tahoma,sans-serif;font-size:18px;line-height:18px;font-weight:400;letter-spacing:0px;color:#12263a;"> <span>noreply@envato.com</span> </div>
 								</a>
 							</div>
 						</div>
@@ -147,13 +147,13 @@
 							<hr class="no_line" style="margin: 0 auto 15px auto" />
 							<div class="column_attr clearfix" style="background-image:url('images/shopassistant-contact-icon1.svg');background-repeat:no-repeat;background-position:left top;padding:15px 0 20px 60px ;">
 								<a href="tel:+61383766284">
-									<div class="google_font" style="font-family:'Zen Kaku Gothic New',Arial,Tahoma,sans-serif;font-size:18px;line-height:18px;font-weight:400;letter-spacing:0px;color:#12263a;"> +61 (0) 383 766 284 </div>
+									<div class="google_font" style="font-family:'',Arial,Tahoma,sans-serif;font-size:18px;line-height:18px;font-weight:400;letter-spacing:0px;color:#12263a;"> +61 (0) 383 766 284 </div>
 								</a>
 							</div>
 							<hr class="no_line" style="margin: 0 auto 10px auto" />
 							<div class="column_attr clearfix" style="background-image:url('images/shopassistant-contact-icon2.svg');background-repeat:no-repeat;background-position:left top;padding:15px 0 20px 60px ;">
 								<a href="#">
-									<div class="google_font" style="font-family:'Zen Kaku Gothic New',Arial,Tahoma,sans-serif;font-size:18px;line-height:18px;font-weight:400;letter-spacing:0px;color:#12263a;"> <span>noreply@envato.com</span> </div>
+									<div class="google_font" style="font-family:'',Arial,Tahoma,sans-serif;font-size:18px;line-height:18px;font-weight:400;letter-spacing:0px;color:#12263a;"> <span>noreply@envato.com</span> </div>
 								</a>
 							</div>
 						</div>
