--- a/index-shopassistant.html
+++ b/index-shopassistant.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="content/shopassistant/css/shopassistant.css" />
   <!-- Revolution Slider -->
   <link rel="stylesheet" href="plugins/rs-plugin-6.custom/css/rs6.css" />
-  <link rel="stylesheet" href="css/top_bar.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 
 <body
@@ -359,7 +359,7 @@
                         border-right: 1px solid #e4e4e4;
                       ">
                     <div class="google_font" style="
-                          font-family: 'Zen Kaku Gothic New', Arial, Tahoma,
+                          font-family: '', Arial, Tahoma,
                             sans-serif;
                           font-size: 48px;
                           line-height: 48px;
@@ -413,7 +413,7 @@
                         border-right: 1px solid #e4e4e4;
                       ">
                     <div class="google_font" style="
-                          font-family: 'Zen Kaku Gothic New', Arial, Tahoma,
+                          font-family: '', Arial, Tahoma,
                             sans-serif;
                           font-size: 48px;
                           line-height: 48px;
@@ -467,7 +467,7 @@
                         border-right: 1px solid #e4e4e4;
                       ">
                     <div class="google_font" style="
-                          font-family: 'Zen Kaku Gothic New', Arial, Tahoma,
+                          font-family: '', Arial, Tahoma,
                             sans-serif;
                           font-size: 48px;
                           line-height: 48px;
@@ -521,7 +521,7 @@
                         border-right: 1px solid #e4e4e4;
                       ">
                     <div class="google_font" style="
-                          font-family: 'Zen Kaku Gothic New', Arial, Tahoma,
+                          font-family: '', Arial, Tahoma,
                             sans-serif;
                           font-size: 48px;
                           line-height: 48px;
@@ -598,7 +598,7 @@
                 <div class="col-12">
                   <div class="column_attr clearfix align_center">
                     <div class="google_font" style="
-                          font-family: 'Zen Kaku Gothic New', Arial, Tahoma,
+                          font-family: '', Arial, Tahoma,
                             sans-serif;
                           font-size: 80px;
                           line-height: 80px;
@@ -644,7 +644,7 @@
                 <div class="col-12">
                   <div class="column_attr clearfix align_center">
                     <div class="google_font" style="
-                          font-family: 'Zen Kaku Gothic New', Arial, Tahoma,
+                          font-family: '', Arial, Tahoma,
                             sans-serif;
                           font-size: 80px;
                           line-height: 80px;
@@ -1051,7 +1051,7 @@
               </div>
             </div>
           </div>
-        </div>
+      </div>
       </div>
     </div>
     <footer id="Footer" class="clearfix">
